# cg_lab1

./: .clang-format  .gitignore  CMakeLists.txt  Camera.cpp  README.md  fragment.glsl  main.cpp  pipeline.cpp  pipeline.h  vertex.glsl
shaders/: billboard_fragment.glsl  billboard_geometry.glsl  fragment.glsl  light_fragment.glsl  light_vertex.glsl  particle_geometry.glsl  shadow_vertex.glsl  skybox_vertex.glsl  vertex.glsl
src/: Camera.cpp  Camera.h  GLUTBackend.cpp  GLUTBackend.h  ICallbacks.h  LightingTechnique.cpp  LightingTechnique.h  Mesh.cpp  Mesh.h  Pipeline.cpp  Pipeline.h  ShadowMapFBO.h  ShadowMapTechnique.cpp  Technique.cpp  Technique.h  Texture.cpp  Texture.h  Vertex.h  main.cpp  utils.cpp  utils.h
src/billboard/: BillboardList.cpp  BillboardList.h  BillboardTechnique.cpp  BillboardTechnique.h
src/camera/: Camera.cpp  Camera.h
src/fbo/: ShadowMapFBO.cpp  ShadowMapFBO.h
src/glut_backend/: GLUTBackend.cpp  GLUTBackend.h  ICallbacks.h  common.h
src/light/: LightingTechnique.h
src/mesh/: Mesh.cpp  Mesh.h  Texture.cpp  Texture.h
src/particle_system/: PSUpdateTechnique.cpp  PSUpdateTechnique.h  ParticleSystem.cpp  ParticleSystem.h  RandomTexture.cpp  RandomTexture.h
src/shadow_map/: ShadowMapFBO.cpp  ShadowMapTechnique.h
src/skybox/: CubemapTexture.h  Skybox.cpp  Skybox.h  SkyboxTechnique.cpp  SkyboxTechnique.h
src/technique/: BillboardTechnique.cpp  BillboardTechnique.h  LightingTechnique.cpp  LightingTechnique.h  ShadowMapTechnique.cpp  ShadowMapTechnique.h  SkyboxTechnique.cpp  SkyboxTechnique.h  Technique.cpp  Technique.h
src/texture/: CubemapTexture.cpp  Texture.h
src/utils/: Pipeline.cpp  Pipeline.h  utils.cpp  utils.h
